# vtherm_adaptive_tpi

./: README-fr.md  README.md  hacs.json  pyproject.toml  requirements_dev.txt  requirements_test.txt
.github/workflows/: pytest.yml  release.yml
cards/: adaptive_tpi_diagnostics_en.md  adaptive_tpi_diagnostics_en.yaml  adaptive_tpi_diagnostics_fr.md  adaptive_tpi_diagnostics_fr.yaml
custom_components/vtherm_adaptive_tpi/: __init__.py  algo.py  config_flow.py  const.py  factory.py  handler.py  manifest.json  services.yaml  strings.json
custom_components/vtherm_adaptive_tpi/adaptive_tpi/: __init__.py  controller.py  deadtime.py  deadtime_tracker.py  diagnostics.py  estimator.py  learning_policy.py  learning_window.py  mode.py  startup_bootstrap.py  state.py  supervisor.py  valve_curve.py  valve_curve_learning.py
custom_components/vtherm_adaptive_tpi/translations/: en.json  fr.json
docs/: architecture-fr.md  architecture.md  diagnostics-fr.md  diagnostics.md
tests/: conftest.py  test_behavioral.py  test_device_registry_binding.py  test_reload_orchestration.py
