[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtherm_adaptive_tpi"
version = "0.1.0"
description = "Adaptive TPI plugin for Versatile Thermostat"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "KipK" }
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["custom_components"]

